--- a/web/themes/custom/deposit_return_theme/css/theme.css
+++ b/web/themes/custom/deposit_return_theme/css/theme.css
@@ -11766,74 +11766,87 @@ p {
   color: white;
 }
 
-header {
+.navbar {
+  padding: 0;
   height: 140px;
   background-color: #4C024F;
 }
-header .navbar-brand img {
+.navbar .navbar-brand img {
   height: 95px;
 }
 @media (max-width: 991.98px) {
-  header .navbar-brand img {
+  .navbar .navbar-brand img {
     height: 85px;
   }
 }
-header .navbar-collapse {
-  padding-top: 30px;
+@media (max-width: 991.98px) {
+  .navbar .navbar-collapse {
+    padding-top: 30px;
+  }
 }
-header .navbar-collapse nav {
+.navbar .navbar-collapse nav {
   height: 140px;
   display: flex;
 }
-header .navbar-collapse nav .navbar-nav {
+.navbar .navbar-collapse nav .navbar-nav {
   align-content: end;
   padding-bottom: 20px;
   gap: 60px;
 }
-header .navbar-collapse nav .navbar-nav a {
+.navbar .navbar-collapse nav .navbar-nav a {
   color: #C6E236;
   font-weight: 900;
   font-size: 20px;
 }
-header .navbar-collapse nav .navbar-nav a:hover {
+.navbar .navbar-collapse nav .navbar-nav a:hover {
   color: #C6E236;
   background: #660269;
 }
 @media (max-width: 991.98px) {
-  header .navbar-collapse nav .navbar-nav {
+  .navbar .navbar-collapse nav .navbar-nav {
     gap: 0;
     width: 100%;
   }
-  header .navbar-collapse nav .navbar-nav li {
+  .navbar .navbar-collapse nav .navbar-nav li {
     border-bottom: solid 1px #660269;
     width: 100%;
   }
-  header .navbar-collapse nav .navbar-nav li a {
+  .navbar .navbar-collapse nav .navbar-nav li a {
     padding: 20px;
     width: 100%;
   }
+  .navbar .navbar-collapse nav .navbar-nav li a:after {
+    display: none;
+  }
+  .navbar .navbar-collapse nav .navbar-nav li:last-child {
+    border: none;
+  }
 }
 @media (max-width: 991.98px) {
-  header .navbar-collapse nav .dropdown-menu {
+  .navbar .navbar-collapse nav .dropdown-menu {
     display: block;
     background: none;
     border: none;
-    padding: 20px;
   }
-  header .navbar-collapse nav .dropdown-menu li {
+  .navbar .navbar-collapse nav .dropdown-menu li {
     border: none;
   }
-  header .navbar-collapse nav .dropdown-menu li a:hover {
+  .navbar .navbar-collapse nav .dropdown-menu li a {
+    padding: 20px 40px;
+    font-size: 16px;
+    font-weight: 600;
+  }
+  .navbar .navbar-collapse nav .dropdown-menu li a:hover {
     background: #660269;
   }
 }
 @media (max-width: 991.98px) {
-  header .navbar-collapse nav {
+  .navbar .navbar-collapse nav {
     height: auto;
   }
 }
 @media (max-width: 991.98px) {
-  header {
+  .navbar {
     height: auto;
   }
 }
