--- a/web/themes/custom/deposit_return_theme/scss/theme/layout/_header.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/layout/_header.scss
@@ -1,4 +1,5 @@
-header {
+.navbar {
+  padding: 0;
   height: 140px;
   background-color: $dark-purple;
 
@@ -12,7 +13,9 @@ header {
   }
 
   .navbar-collapse {
-    padding-top: 30px;
+    @include media-breakpoint-down(lg) {
+      padding-top: 30px;
+    }
 
     nav {
       height: 140px;
@@ -44,6 +47,12 @@ header {
             a {
               padding: 20px;
               width: 100%;
+              &:after {
+                display: none;
+              }
+            }
+            &:last-child {
+              border: none;
             }
           }
         }
@@ -54,11 +63,13 @@ header {
           display: block;
           background: none;
           border: none;
-          padding: 20px;
           li {
             border: none;
 
             a {
+              padding: 20px 40px;
+              font-size: 16px;
+              font-weight: 600;
               &:hover {
                 background: $purple;
               }
