small tweaks to nav and footer

--- a/web/themes/custom/deposit_return_theme/css/theme.css
+++ b/web/themes/custom/deposit_return_theme/css/theme.css
@@ -11808,6 +11808,11 @@ p {
   border-bottom: solid 6px #C6E236;
   margin-bottom: 0;
 }
+@media (max-width: 1199.98px) {
+  .navbar .navbar-collapse nav .navbar-nav {
+    gap: 20px;
+  }
+}
 @media (max-width: 991.98px) {
   .navbar .navbar-collapse nav .navbar-nav {
     gap: 0;
@@ -11838,7 +11843,7 @@ p {
   padding: 0;
 }
 .navbar .navbar-collapse nav .dropdown-menu a {
-  padding: 20px;
+  padding: 20px !important;
 }
 .navbar .navbar-collapse nav .dropdown-menu a:hover {
   background: #4C024F;
@@ -11853,7 +11858,7 @@ p {
     border: none;
   }
   .navbar .navbar-collapse nav .dropdown-menu li a {
-    padding: 20px 40px;
+    padding: 20px 40px !important;
     font-size: 16px;
     font-weight: 600;
   }
@@ -11893,10 +11898,14 @@ footer {
 footer .region-first-footer {
   display: flex;
   align-items: center;
+  margin-bottom: 20px;
 }
 footer .region-first-footer a {
   color: #C6E236;
   text-decoration: none;
+}
+footer .region-first-footer p {
+  margin: 0;
 }
 footer .region-first-footer #block-socialicons {
   margin-left: auto;
