--- a/web/themes/custom/deposit_return_theme/scss/theme/layout/_header.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/layout/_header.scss
@@ -42,6 +42,10 @@
           }
         }
 
+        @include media-breakpoint-down(xl) {
+          gap: 20px;
+        }
+
         @include media-breakpoint-down(lg) {
           gap: 0;
           width: 100%;
@@ -72,7 +76,7 @@
         border: 0;
         padding: 0;
         a {
-          padding: 20px;
+          padding: 20px !important;
           &:hover {
             background: $dark-purple;
           }
@@ -85,7 +89,7 @@
             border: none;
 
             a {
-              padding: 20px 40px;
+              padding: 20px 40px !important;
               font-size: 16px;
               font-weight: 600;
               &:hover {
