--- a/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_card.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_card.scss
@@ -69,6 +69,13 @@
       background-size: 100%;
       height: 119px;
       width: 100%;
+      background-position-y: bottom;
+      position: relative;
+      bottom: -1px;
+      @include media-breakpoint-down(lg) {
+        height: 157px;
+      }
+
     }
   }
 }
