--- a/web/themes/custom/deposit_return_theme/css/theme.css
+++ b/web/themes/custom/deposit_return_theme/css/theme.css
@@ -12491,16 +12491,39 @@ footer .region-footer .block-menu .nav, footer .region-footer .block-menu .media
   padding: 0 0 20px 0;
 }
 
-.steps {
-  padding: 100px 0;
+.paragraph--type--steps .steps {
   background-color: #660269;
 }
-.steps .field--name-field-add-step {
+.paragraph--type--steps .steps .field--name-field-add-step {
   display: flex;
   flex-direction: column;
 }
-.steps .field--name-field-add-step .paragraph--type--step {
+.paragraph--type--steps .steps .field--name-field-add-step .paragraph--type--step {
   flex: 0 0 100%;
+}
+.paragraph--type--steps:before {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  background-image: url("../images/divider-purple-top.svg");
+  background-size: 100%;
+  height: 312px;
+  background-repeat: no-repeat;
+  background-position-y: bottom;
+  position: relative;
+  bottom: -9px;
+}
+.paragraph--type--steps:after {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  background-image: url("../images/divider-purple-bottom.svg");
+  background-size: 100%;
+  height: 312px;
+  background-repeat: no-repeat;
+  background-position-y: top;
+  position: relative;
+  top: -1px;
 }
 
 .step {
