--- a/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_steps.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_steps.scss
@@ -1,11 +1,38 @@
-.steps {
-  padding: 100px 0;
-  background-color: $purple;
-  .field--name-field-add-step {
-    display: flex;
-    flex-direction: column;
-    .paragraph--type--step {
-      flex: 0 0 100%;
+.paragraph--type--steps {
+  .steps {
+
+    background-color: $purple;
+
+    .field--name-field-add-step {
+      display: flex;
+      flex-direction: column;
+      .paragraph--type--step {
+        flex: 0 0 100%;
+      }
     }
+  }
+  &:before {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    background-image: url("../images/divider-purple-top.svg");
+    background-size: 100%;
+    height: 312px;
+    background-repeat: no-repeat;
+    background-position-y: bottom;
+    position: relative;
+    bottom: -9px;
+  }
+  &:after {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    background-image: url("../images/divider-purple-bottom.svg");
+    background-size: 100%;
+    height: 312px;
+    background-repeat: no-repeat;
+    background-position-y: top;
+    position: relative;
+    top: -1px;
   }
 }
