--- a/web/themes/custom/deposit_return_theme/css/theme.css
+++ b/web/themes/custom/deposit_return_theme/css/theme.css
@@ -12034,6 +12034,29 @@ footer .region-footer .block-menu .nav, footer .region-footer .block-menu .media
 
 .light-grey {
   background-color: #EBEBEB;
+  padding-top: 0 !important;
+}
+.light-grey:before {
+  content: "";
+  display: inline-block;
+  width: 100%;
+  background-image: url("../images/divider-white-bottom.svg");
+  background-size: 100%;
+  height: 360px;
+  background-repeat: no-repeat;
+  background-position-y: top;
+  position: relative;
+  top: -1px;
+}
+@media (max-width: 991.98px) {
+  .light-grey:before {
+    height: 212px;
+  }
+}
+@media (max-width: 767.98px) {
+  .light-grey:before {
+    height: 140px;
+  }
 }
 
 .article h1, .article .h1 {
