--- a/web/themes/custom/deposit_return_theme/scss/theme/_background-colours.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/_background-colours.scss
@@ -28,4 +28,23 @@
 
 .light-grey {
   background-color: $light-grey;
+  padding-top: 0 !important;
+  &:before {
+    content: "";
+    display: inline-block;
+    width: 100%;
+    background-image: url("../images/divider-white-bottom.svg");
+    background-size: 100%;
+    height: 360px;
+    background-repeat: no-repeat;
+    background-position-y: top;
+    position: relative;
+    top: -1px;
+    @include media-breakpoint-down(lg) {
+      height: 212px;
+    }
+    @include media-breakpoint-down(md) {
+      height: 140px;
+    }
+  }
 }
