--- a/web/themes/custom/deposit_return_theme/css/theme.css
+++ b/web/themes/custom/deposit_return_theme/css/theme.css
@@ -11775,80 +11775,83 @@ p {
   display: none;
 }
 
-.navbar {
+header {
+  z-index: 999;
+}
+header .navbar {
   padding: 0;
   height: 140px;
   background-color: #4C024F;
 }
-.navbar .navbar-brand img {
+header .navbar .navbar-brand img {
   height: 95px;
 }
 @media (max-width: 991.98px) {
-  .navbar .navbar-brand img {
+  header .navbar .navbar-brand img {
     height: 85px;
   }
 }
 @media (max-width: 991.98px) {
-  .navbar .navbar-collapse {
+  header .navbar .navbar-collapse {
     padding-top: 30px;
   }
 }
-.navbar .navbar-collapse nav {
+header .navbar .navbar-collapse nav {
   height: 140px;
   display: flex;
 }
-.navbar .navbar-collapse nav .navbar-nav {
+header .navbar .navbar-collapse nav .navbar-nav {
   align-content: end;
   gap: 60px;
 }
-.navbar .navbar-collapse nav .navbar-nav li {
+header .navbar .navbar-collapse nav .navbar-nav li {
   display: flex;
   align-items: end;
 }
-.navbar .navbar-collapse nav .navbar-nav li a {
+header .navbar .navbar-collapse nav .navbar-nav li a {
   color: #C6E236;
   font-weight: 900;
   font-size: 20px;
   margin-bottom: 6px;
   padding: 20px 0;
 }
-.navbar .navbar-collapse nav .navbar-nav li a:hover {
+header .navbar .navbar-collapse nav .navbar-nav li a:hover {
   color: #C6E236;
   border-bottom: solid 6px #C6E236;
   margin-bottom: 0;
 }
-.navbar .navbar-collapse nav .navbar-nav li a.active, .navbar .navbar-collapse nav .navbar-nav li .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .navbar .navbar-collapse nav .navbar-nav li a.is-active {
+header .navbar .navbar-collapse nav .navbar-nav li a.active, header .navbar .navbar-collapse nav .navbar-nav li .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header header .navbar .navbar-collapse nav .navbar-nav li a.is-active {
   color: #C6E236;
   border-bottom: solid 6px #C6E236;
   margin-bottom: 0;
 }
 @media (max-width: 1199.98px) {
-  .navbar .navbar-collapse nav .navbar-nav {
+  header .navbar .navbar-collapse nav .navbar-nav {
     gap: 20px;
   }
 }
 @media (max-width: 991.98px) {
-  .navbar .navbar-collapse nav .navbar-nav {
+  header .navbar .navbar-collapse nav .navbar-nav {
     gap: 0;
     width: 100%;
   }
-  .navbar .navbar-collapse nav .navbar-nav li {
+  header .navbar .navbar-collapse nav .navbar-nav li {
     border-bottom: solid 1px #660269;
     width: 100%;
     display: block;
   }
-  .navbar .navbar-collapse nav .navbar-nav li a {
+  header .navbar .navbar-collapse nav .navbar-nav li a {
     padding: 20px;
     width: 100%;
   }
-  .navbar .navbar-collapse nav .navbar-nav li a:after {
+  header .navbar .navbar-collapse nav .navbar-nav li a:after {
     display: none;
   }
-  .navbar .navbar-collapse nav .navbar-nav li:last-child {
+  header .navbar .navbar-collapse nav .navbar-nav li:last-child {
     border: none;
   }
 }
-.navbar .navbar-collapse nav .dropdown-menu {
+header .navbar .navbar-collapse nav .dropdown-menu {
   background: #4C024F;
   box-shadow: none;
   border-radius: 0;
@@ -11856,55 +11859,54 @@ p {
   border: 0;
   padding: 0;
 }
-.navbar .navbar-collapse nav .dropdown-menu a {
+header .navbar .navbar-collapse nav .dropdown-menu a {
   padding: 20px !important;
 }
-.navbar .navbar-collapse nav .dropdown-menu a:hover {
+header .navbar .navbar-collapse nav .dropdown-menu a:hover {
   background: #4C024F;
 }
-.navbar .navbar-collapse nav .dropdown-menu a.active, .navbar .navbar-collapse nav .dropdown-menu .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header .navbar .navbar-collapse nav .dropdown-menu a.is-active {
+header .navbar .navbar-collapse nav .dropdown-menu a.active, header .navbar .navbar-collapse nav .dropdown-menu .media-library-view--widget .view-header a.is-active, .media-library-view--widget .view-header header .navbar .navbar-collapse nav .dropdown-menu a.is-active {
   background-color: #4C024F;
 }
 @media (max-width: 991.98px) {
-  .navbar .navbar-collapse nav .dropdown-menu {
+  header .navbar .navbar-collapse nav .dropdown-menu {
     display: block;
     background: none;
     border: none;
   }
-  .navbar .navbar-collapse nav .dropdown-menu li {
+  header .navbar .navbar-collapse nav .dropdown-menu li {
     border: none;
   }
-  .navbar .navbar-collapse nav .dropdown-menu li a {
+  header .navbar .navbar-collapse nav .dropdown-menu li a {
     padding: 20px 40px !important;
     font-size: 16px;
     font-weight: 600;
   }
-  .navbar .navbar-collapse nav .dropdown-menu li a:hover {
+  header .navbar .navbar-collapse nav .dropdown-menu li a:hover {
     background: #660269;
   }
 }
 @media (max-width: 991.98px) {
-  .navbar .navbar-collapse nav {
+  header .navbar .navbar-collapse nav {
     height: auto;
   }
 }
 @media (max-width: 991.98px) {
-  .navbar {
+  header .navbar {
     height: auto;
     padding: 20px;
   }
 }
-
-.navbar-toggler {
+header .navbar-toggler {
   border: none;
 }
-.navbar-toggler:focus {
+header .navbar-toggler:focus {
   box-shadow: none;
 }
-.navbar-toggler .navbar-toggler-icon {
+header .navbar-toggler .navbar-toggler-icon {
   background-image: url("../icons/close.svg");
 }
-.navbar-toggler.collapsed .navbar-toggler-icon {
+header .navbar-toggler.collapsed .navbar-toggler-icon {
   background-image: url("../icons/mobile-nav.svg");
 }
 
