--- a/web/themes/custom/deposit_return_theme/scss/theme/layout/_header.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/layout/_header.scss
@@ -1,139 +1,142 @@
-.navbar {
-  padding: 0;
-  height: 140px;
-  background-color: $dark-purple;
+header {
+  z-index: 999;
+  .navbar {
+    padding: 0;
+    height: 140px;
+    background-color: $dark-purple;
 
-  .navbar-brand {
-    img {
-      height: 95px;
-      @include media-breakpoint-down(lg) {
-        height: 85px;
+    .navbar-brand {
+      img {
+        height: 95px;
+        @include media-breakpoint-down(lg) {
+          height: 85px;
+        }
       }
     }
-  }
 
-  .navbar-collapse {
-    @include media-breakpoint-down(lg) {
-      padding-top: 30px;
-    }
+    .navbar-collapse {
+      @include media-breakpoint-down(lg) {
+        padding-top: 30px;
+      }
 
-    nav {
-      height: 140px;
-      display: flex;
+      nav {
+        height: 140px;
+        display: flex;
 
-      .navbar-nav {
-        align-content: end;
-        gap: 60px;
-        li {
-          display: flex;
-          align-items: end;
-          a {
-            color: $lime;
-            font-weight: 900;
-            font-size: 20px;
-            margin-bottom: 6px;
-            padding: 20px 0;
-
-            &:hover {
+        .navbar-nav {
+          align-content: end;
+          gap: 60px;
+          li {
+            display: flex;
+            align-items: end;
+            a {
               color: $lime;
-              border-bottom: solid 6px $lime;
-              margin-bottom: 0;
+              font-weight: 900;
+              font-size: 20px;
+              margin-bottom: 6px;
+              padding: 20px 0;
+
+              &:hover {
+                color: $lime;
+                border-bottom: solid 6px $lime;
+                margin-bottom: 0;
+              }
+              &.active {
+                color: $lime;
+                border-bottom: solid 6px $lime;
+                margin-bottom: 0;
+              }
+            }
+          }
+
+          @include media-breakpoint-down(xl) {
+            gap: 20px;
+          }
+
+          @include media-breakpoint-down(lg) {
+            gap: 0;
+            width: 100%;
+            li {
+              border-bottom: solid 1px $purple;
+              width: 100%;
+              display: block;
+
+              a {
+                padding: 20px;
+                width: 100%;
+                &:after {
+                  display: none;
+                }
+              }
+              &:last-child {
+                border: none;
+              }
+            }
+          }
+        }
+
+        .dropdown-menu {
+          background: $dark-purple;
+          box-shadow: none;
+          border-radius: 0;
+          margin-top: 0;
+          border: 0;
+          padding: 0;
+          a {
+            padding: 20px !important;
+            &:hover {
+              background: $dark-purple;
             }
             &.active {
-              color: $lime;
-              border-bottom: solid 6px $lime;
-              margin-bottom: 0;
+              background-color: $dark-purple;
             }
           }
-        }
-
-        @include media-breakpoint-down(xl) {
-          gap: 20px;
-        }
-
-        @include media-breakpoint-down(lg) {
-          gap: 0;
-          width: 100%;
-          li {
-            border-bottom: solid 1px $purple;
-            width: 100%;
+          @include media-breakpoint-down(lg) {
             display: block;
-
-            a {
-              padding: 20px;
-              width: 100%;
-              &:after {
-                display: none;
-              }
-            }
-            &:last-child {
-              border: none;
-            }
-          }
-        }
-      }
-
-      .dropdown-menu {
-        background: $dark-purple;
-        box-shadow: none;
-        border-radius: 0;
-        margin-top: 0;
-        border: 0;
-        padding: 0;
-        a {
-          padding: 20px !important;
-          &:hover {
-            background: $dark-purple;
-          }
-          &.active {
-            background-color: $dark-purple;
-          }
-        }
-        @include media-breakpoint-down(lg) {
-          display: block;
-          background: none;
-          border: none;
-          li {
+            background: none;
             border: none;
+            li {
+              border: none;
 
-            a {
-              padding: 20px 40px !important;
-              font-size: 16px;
-              font-weight: 600;
-              &:hover {
-                background: $purple;
+              a {
+                padding: 20px 40px !important;
+                font-size: 16px;
+                font-weight: 600;
+                &:hover {
+                  background: $purple;
+                }
               }
             }
           }
         }
-      }
 
-      @include media-breakpoint-down(lg) {
-        height: auto;
+        @include media-breakpoint-down(lg) {
+          height: auto;
+        }
       }
+    }
+
+    @include media-breakpoint-down(lg) {
+      height: auto;
+      padding: 20px;
     }
   }
 
-  @include media-breakpoint-down(lg) {
-    height: auto;
-    padding: 20px;
-  }
-}
+  .navbar-toggler {
+    border: none;
 
-.navbar-toggler {
-  border: none;
+    &:focus {
+      box-shadow: none;
+    }
 
-  &:focus {
-    box-shadow: none;
-  }
-
-  .navbar-toggler-icon {
-    background-image: url("../icons/close.svg");
-  }
-
-  &.collapsed {
     .navbar-toggler-icon {
-      background-image: url("../icons/mobile-nav.svg");
+      background-image: url("../icons/close.svg");
+    }
+
+    &.collapsed {
+      .navbar-toggler-icon {
+        background-image: url("../icons/mobile-nav.svg");
+      }
     }
   }
 }
