--- a/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_stats.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_stats.scss
@@ -24,5 +24,7 @@ text-align: center;
       background-color: $purple;
     }
   }
-
+  @include media-breakpoint-down(md) {
+    padding: 0;
+  }
 }
