--- a/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_main-banner.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_main-banner.scss
@@ -95,9 +95,10 @@
 
   .col-lg-5 {
     padding-right: 80px;
-    @include media-breakpoint-down(lg) {
+    padding-left: 40px;
+    @include media-breakpoint-down(xl) {
       padding-right: 0;
     }
   }
-
 }
+
