--- a/web/themes/custom/deposit_return_theme/scss/theme/views/_updates.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/views/_updates.scss
@@ -77,6 +77,9 @@
           }
         }
       }
+      @include media-breakpoint-down(lg) {
+        max-width: 100%;
+      }
     }
     @include media-breakpoint-down(lg) {
       display: block;
