--- a/web/themes/custom/deposit_return_theme/scss/theme/theme.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/theme.scss
@@ -28,6 +28,7 @@
 @import 'paragraphs/cta';
 @import 'paragraphs/stat';
 @import 'paragraphs/stats';
+
 @import 'paragraphs/card';
 @import 'paragraphs/cards';
 @import 'paragraphs/video';
@@ -41,6 +42,6 @@
 @import 'paragraphs/social';
 @import 'paragraphs/examples';
 
-//forms
+//Forms
 
 @import 'forms/contact';
