--- a/web/themes/custom/deposit_return_theme/templates/paragraphs/paragraph--social-media.html.twig
+++ b/web/themes/custom/deposit_return_theme/templates/paragraphs/paragraph--social-media.html.twig
@@ -16,6 +16,7 @@
               <div class="social-icons">
               <a href="{{ content.field_facebook_link.0 }}" target="_blank" class="facebook"></a>
               <a href="{{ content.field_instagram_link.0 }}" target="_blank" class="instagram"></a>
+              <a href="{{ content.field_tiktok_link.0 }}" target="_blank" class="tiktok"></a>
               </div>
             </div>
           </div>
