--- a/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_social.scss
+++ b/web/themes/custom/deposit_return_theme/scss/theme/paragraphs/_social.scss
@@ -24,5 +24,13 @@
       display: block;
       background-repeat: no-repeat;
     }
+    .tiktok {
+      background-image: url("../icons/tiktok.svg");
+      background-size: 60px;
+      width: 60px;
+      height: 60px;
+      display: block;
+      background-repeat: no-repeat;
+    }
   }
 }
